--- a/ResManSys/client/recipes/NewRecipe.html
+++ b/ResManSys/client/recipes/NewRecipe.html
@@ -1,5 +1,6 @@
 <template name="NewRecipe">
-    <div class=".new-recipe-container">
-        {{>	quickForm collection="Recipes" id="insertRecipeForm" type="insert" class="new-recipe-form"}}
-    </div>
+	<div class="new-recipe-container">
+		<i class="fa fa-close"></i>
+		{{ > quickForm  collection="Recipes" id="insertRecipeForm" type="insert" class="new-recipe-form" }}	
+	</div>
 </template>
