Commit from cloud9

--- a/ResManSys/client/buildings/Building.html
+++ b/ResManSys/client/buildings/Building.html
@@ -1,8 +1,14 @@
+<!--This is a template - it is used in other files()-->
 <template name="Building">
         <article class="building">
             <h3>{{name}}</h3>
-            <p>{{address}}</p>
-            <a href="/building-rooms/{{_id}}">Rooms</a>
-            <a href="/building-edit/{{_id}}">Edit</a>
+            {{#if editMode}}
+                {{> quickForm collection="Buildings" id=updateBuildingId type="update" doc=this}}  <!--if editmode is enabled, the quickForm for updating the building will appear-->
+            {{else}}
+               <p>{{address}}</p>
+               <a href="/building-rooms/{{_id}}">Rooms</a>
+            {{/if}}
+            <i class="fa fa-pencil"></i>                         <!--These are the edit and remove icons, look in the Building.js to see how they work-->
+            <i class="fa fa-trash"></i>
         </article>
 </template>
