--- a/ResManSys/client/buildings/BuildingEdit.html
+++ b/ResManSys/client/buildings/BuildingEdit.html
@@ -1,4 +1,9 @@
+<!--This is a template - it is used in other files(../lib/routes.js)-->
 <template name="BuildingEdit">
             <h1>Nothing here yet for {{building.name}}</h1>
+            <!-- <div class="edit-building-container">
+	        	{{ > quickForm  collection="Buildings" id=updateBuilding type="update" 
+	        	 (refers to the template that loops over the buildings, may not be right) doc="{{> Buildings}}" }}	
+	        </div> -->
             <a href="/manage-buildings-page">Cancel</a>
 </template>
