--- a/ResManSys/client/buildings/NewBuilding.html
+++ b/ResManSys/client/buildings/NewBuilding.html
@@ -1,6 +1,7 @@
-<!-- A form for adding new buildings -->
+<!--This is a template - it is used in other files(buildings/buildings.html)-->
 <template name="NewBuilding">
 	<div class="new-building-container">
+		<i class="fa fa-close"></i>
 		{{ > quickForm  collection="Buildings" id="insertBuildingForm" type="insert" class="new-building-form" }}	
 	</div>
 </template>
