--- a/ResManSys/client/requests/Request.html
+++ b/ResManSys/client/requests/Request.html
@@ -1,8 +1,10 @@
+<!--This is a template - it is used in other files()-->
 <template name="Request">
         <article class="request">
             <h3>{{type}}</h3>
             <p>{{desc}}</p>
             <p>{{room}}</p>
+            <p>{{author}}</p>
             <p>{{createdAt}}</p>            
         </article>
 </template>
