--- a/ResManSys/client/buildings/BuildingRooms.html
+++ b/ResManSys/client/buildings/BuildingRooms.html
@@ -1,3 +1,4 @@
+<!--This is a template - it is used in other files(../lib/routes.js)-->
 <template name="BuildingRooms">
     <h1>List of rooms for this building will go here</h1>
     <a href="/manage-buildings-page">Cancel</a>
