Working version from cloud9

--- a/ResManSys/client/buildings/Building.html
+++ b/ResManSys/client/buildings/Building.html
@@ -1,4 +1,7 @@
 <!--This is a template - it is used in other files()-->
+<!-- This page lists the buildings in the system. You can edit details, or the building may be deleted. -->
+<!-- A link to the rooms in the same building are present. 
+That is the entries in the room collection(database) related to the building. -->
 <template name="Building">
         <article class="building">
             <h3>{{name}}</h3>
