--- a/ResManSys/client/buildings/NewBuilding.html
+++ b/ResManSys/client/buildings/NewBuilding.html
@@ -1,4 +1,5 @@
 <!--This is a template - it is used in other files(buildings/buildings.html)-->
+<!-- This is the form for creating a new building, using Meteor's methods to build the form. -->
 <template name="NewBuilding">
 	<div class="new-building-container">
 		<i class="fa fa-close"></i>
