--- a/ResManSys/client/requests/NewRequest.html
+++ b/ResManSys/client/requests/NewRequest.html
@@ -1,4 +1,5 @@
 <!--This is a template - it is used in other files(requests/Requests.html)-->
+<!-- This is a form for a request, using Meteor's built-in functions to build the form. -->
 <template name="NewRequest">
     <section class="new-requests-container">
 		{{ > quickForm  collection="Requests" id="insertRequestForm" type="insert" class="new-request-form" }}
